<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/edit_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_titlebar"
            style="@style/titlebar"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <Button
                android:id="@+id/button_cancel"
                style="@style/button_edit"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/button_cancel" />

            <TextView
                android:id="@+id/textview_title"
                style="@style/textview_calendar_month"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/textview_edit_title" />

            <Button
                android:id="@+id/button_save"
                style="@style/button_edit"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/button_save" />
        </RelativeLayout>

        <LinearLayout
            style="@style/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview_day_title"
                    style="@style/textview_day_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/imageview_day_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <EditText
                android:id="@+id/edittext_day_description"
                style="@style/edittext_day_description"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="left|top"
                android:hint="@string/text_day_description_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>